# blockbar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
autocomplete/: bbc.bash  bbc.fish  bbc.zsh
doc/: blockbar.1  modules.rst
include/blockbar/: blockbar.h  types.h  version.h
modules/: rebuild_modules.sh
modules/legacy/: Makefile  main.c
modules/subblocks/: Makefile  main.c
modules/text/: Makefile  main.c
src/: bbc.c  bbc.h  blockbar.c  blocks.h  config.c  config.h  exec.c  exec.h  main.c  modules.c  modules.h  render.c  render.h  socket.c  socket.h  task.c  task.h  tray.c  tray.h  types.h  util.c  util.h  window-common.c  window.c  window.h  wl.c
